--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
   "theme_color": "#27ae60",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2874/2874810.png",
+      "src": "https://i.postimg.cc/zfkQmpxX/modern-islamic-mosque-and-quran-logo-in-isolated-vector-46556626-2.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
