--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,15 @@
   "theme_color": "#27ae60",
   "icons": [
     {
-      "src": "https://i.postimg.cc/zfkQmpxX/modern-islamic-mosque-and-quran-logo-in-isolated-vector-46556626-2.jpg",
+      "src": "icon.jpg",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any maskable"
+    },
+    {
+      "src": "icon.jpg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
     }
   ]
 }
